--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>我的网页 - HTMLPAGE.CN</title>
+    <title>一年级</title>
     <link rel="shortcut icon" href="https://htmlpage.cn/favicon.png">
     <link rel="stylesheet" href="./css/style.css">
   </head>
@@ -18,7 +18,7 @@
             <h1><a href="tin1us.github.io/liuerban.github.io"><img src="https://github.com/tin1us/liuerban.github.io/blob/main/img/th.jpg?raw=true" alt="HTMLPAGE" itemprop="logo" class="custom-logo" /></a></h1>
             <nav role="navigation">
               <ul>
-                <li><a href="tin1us.github.io/liuerban.github.io" class="active">首页</a></li>
+                <a href="tin1us.github.io/liuerban.github.io" class="active">首页</a>
                 <li></li>
                 <li></li>
                 <li></li>
