--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <header id="nav-1" role="banner">
         <div class="container">
           <div class="header-inner">
-            <h1><a href="tin1us.github.io/liuerban.github.io"><img src="https://github.com/tin1us/liuerban.github.io/blob/main/img/th.jpg?raw=true" alt="HTMLPAGE" itemprop="logo" class="custom-logo" /></a></h1>
+            <h1><a href="https://tin1us.github.io/liuerban.github.io"><img src="https://github.com/tin1us/liuerban.github.io/blob/main/img/th.jpg?raw=true" alt="HTMLPAGE" itemprop="logo" class="custom-logo" /></a></h1>
             <nav role="navigation">
               <ul>
-                <a href="tin1us.github.io/liuerban.github.io" class="active">首页</a>
+                <a href="https://tin1us.github.io/liuerban.github.io" class="active">首页</a>
                 <li></li>
                 <li></li>
                 <li></li>
@@ -49,7 +49,7 @@
         <div class="cell">
           <div id="if3b7" class="c4629">                                                                                      &lt;无</div>
         </div>
-        <div class="cell"><a href="tin1us.github.io/g2.github.io">        二年级&gt;</a></div>
+        <div class="cell"><a href="https://tin1us.github.io/g2.github.io">        二年级&gt;</a></div>
       </div>
       <div>
         <section class="footer-1">
@@ -60,7 +60,7 @@
                 <p class="mbr-text">© Copyright 2023 <a href="tin1us.github.io/liuerban.github.io">201702</a> - All Rights Reserved
                 </p>
               </div>
-              <link rel="stylesheet" href="tin1us.github.io/liuerban.github.io/css/min.css" />
+              <link rel="stylesheet" href="https://tin1us.github.io/liuerban.github.io/css/min.css" />
               <section class="footer-1"></section>
             </div>
           </div>
