--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="media-container-row align-center">
               <div class="col-12">
                 <p class="mbr-text">在此鸣谢：<br /><br />六二班全体师生<br />制作于2023年</p>
-                <p class="mbr-text">© Copyright 2023 <a href="tin1us.github.io/liuerban.github.io">201702</a> - All Rights Reserved
+                <p class="mbr-text">© Copyright 2023 <a href="https://tin1us.github.io/liuerban.github.io">201702</a> - All Rights Reserved
                 </p>
               </div>
               <link rel="stylesheet" href="https://tin1us.github.io/liuerban.github.io/css/min.css" />
