--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <head>
     <meta charset="utf-8">
     <title>一年级</title>
-    <link rel="shortcut icon" href="https://github.com/tin1us/liuerban.github.io/blob/main/img/th.jpg">
     <link rel="stylesheet" href="./css/style.css">
   </head>
 
@@ -44,7 +43,7 @@
       <div id="i4p7z" class="c3330">    这一天，我们都戴上了红领巾，成为了一名光荣的少先队员。</div>
       <div id="izzm6" class="c3472">一年级六一</div><img src="https://github.com/tin1us/image/blob/main/612.jpg?raw=true" class="c3581" /><img src="https://github.com/tin1us/image/blob/main/613.jpg?raw=true" class="c3700" />
       <div id="ieyjd" class="c3894">    这是我们小学生涯中的第一次六一，它给我们带来了欢愉</div>
-      <div id="i1b5i" class="c4005">致此，小学一年级结束</div>
+      <div id="i1b5i" class="c4005">至此，小学一年级结束</div>
       <div class="row">
         <div class="cell">
         </div>
