--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="zh-CN">
 
   <head>
@@ -10,14 +10,16 @@
   <body>
 
     <body>
+      <meta charset="utf-8" />
+      <title>一年级</title>
+      <link rel="stylesheet" href="./css/style.css" />
       <link rel="stylesheet" href="https://template-1253409072.cos.ap-guangzhou.myqcloud.com/bootstrap/css/bootstrap.min.css" />
       <header id="nav-1" role="banner">
         <div class="container">
           <div class="header-inner">
             <h1><a href="https://tin1us.github.io/liuerban.github.io"><img src="https://github.com/tin1us/liuerban.github.io/blob/main/img/th.jpg?raw=true" alt="HTMLPAGE" itemprop="logo" class="custom-logo" /></a></h1>
             <nav role="navigation">
-              <ul>
-                <a href="https://tin1us.github.io/liuerban.github.io" class="active">首页</a>
+              <ul><a href="https://tin1us.github.io/liuerban.github.io" class="active">首页</a>
                 <li></li>
                 <li></li>
                 <li></li>
@@ -33,15 +35,15 @@
       <link rel="stylesheet" href="https://template-1253409072.cos.ap-guangzhou.myqcloud.com/bootstrap/css/bootstrap.min.css" />
       <div id="i4jaw" class="c15335">一年级</div>
       <link rel="stylesheet" href="https://template-1253409072.cos.ap-guangzhou.myqcloud.com/bootstrap/css/bootstrap.min.css" />
-      <h1 id="i7417h" class="c1660">一年级上学期朗诵活动</h1><img src="https://github.com/tin1us/image/blob/main/%E6%9C%97%E8%AF%B5%E4%B8%80.jpg?raw=true" class="c16221" /><img src="https://github.com/tin1us/image/blob/main/%E6%9C%97%E8%AF%B5%E4%B8%89.jpg?raw=true" class="c16544" />
+      <h1 id="i7417h" class="c1660">一年级上学期朗诵活动</h1><img src="https://imgmo.com/images/2023/05/20/0ef5dedfc8e7e22581db289ddde5b890.jpg" class="c16221" /><img src="https://imgmo.com/images/2023/05/20/2185512944b03039e39e016c545a64dc.jpg" class="c16544" />
       <div id="iv0wga" class="c16705">    一年级上学期的这次朗诵,是我们第一次参加活动。排练的那几天,我们十分认真,为的就是在这台上不输给别人!</div>
-      <div id="ig93xg" class="c17660">2018年春游</div><img src="https://github.com/tin1us/image/blob/main/%E6%98%A5%E6%B8%B8%E4%BA%8C.jpg?raw=true" class="c17914" /><img src="https://github.com/tin1us/image/blob/main/%E6%98%A5%E6%B8%B8%E4%B8%80.jpg?raw=true" class="c17805" /><img src="https://github.com/tin1us/image/blob/main/%E6%98%A5%E6%B8%B8%E4%B8%89.jpg?raw=true" class="c18070" />
+      <div id="ig93xg" class="c17660">2018年春游</div><img src="https://imgmo.com/images/2023/05/20/3cf0f20ea362f0b772d3be2034fb22eb.jpg" class="c17914" /><img src="https://imgmo.com/images/2023/05/20/92417de2bba8ac3547a69fe1d20b3f6f.jpg" class="c17805" /><img src="https://imgmo.com/images/2023/05/20/c2d8c84f23121dd0c7148cd071b97748.jpg" class="c18070" />
       <div id="itaw6f" class="c18378">    这次春游，我们不仅收获了乐趣，还懂得了怎样团结。</div>
-      <div id="i925rf" class="c18998">一年级上学期期末</div><img src="https://github.com/tin1us/image/blob/main/%E6%9C%9F%E6%9C%AB%E4%B8%80.jpg?raw=true" class="c19309" /><img src="https://github.com/tin1us/image/blob/main/%E6%9C%9F%E6%9C%AB%E4%BA%8C.jpg?raw=true" class="c19420" /><img src="https://github.com/tin1us/image/blob/main/%E6%9C%9F%E6%9C%AB%E4%B8%89.jpg?raw=true" class="c19512" />
+      <div id="i925rf" class="c18998">一年级上学期期末</div><img src="https://imgmo.com/images/2023/05/20/c414e27e2ae90ed0fc2e0d44299e01e0.jpg" class="c19309" /><img src="https://imgmo.com/images/2023/05/20/80e3b4c1d53d07c3a9dab0f4d9fe6442.jpg" class="c19420" /><img src="https://imgmo.com/images/2023/05/20/221475eb0c3ea1a8368a52b8fdf22ba8.jpg" class="c19512" />
       <div id="i98tz9" class="c19669">    春节过后，我们迎来了第一次期末考试,一年级上学期,便在笑声中度过。</div>
-      <div id="ixu2o" class="c2946">一年级入队活动</div><img src="https://github.com/tin1us/image/blob/main/%E5%B0%91%E5%85%88%E9%98%9F%E5%91%98%E4%B8%89.jpg?raw=true" class="c3067" /><img src="https://github.com/tin1us/image/blob/main/%E5%B0%91%E5%85%88%E9%98%9F%E5%91%98%EF%BC%8C%E4%BA%8C.jpg?raw=true" class="c3204" />
+      <div id="ixu2o" class="c2946">一年级入队活动</div><img src="https://imgmo.com/images/2023/05/20/f6e858ec95230b865d9a9a797e771c71.jpg" class="c3067" /><img src="https://imgmo.com/images/2023/05/20/e012604662595c3cca9c20752e0a9cae.jpg" class="c3204" />
       <div id="i4p7z" class="c3330">    这一天，我们都戴上了红领巾，成为了一名光荣的少先队员。</div>
-      <div id="izzm6" class="c3472">一年级六一</div><img src="https://github.com/tin1us/image/blob/main/612.jpg?raw=true" class="c3581" /><img src="https://github.com/tin1us/image/blob/main/613.jpg?raw=true" class="c3700" />
+      <div id="izzm6" class="c3472">一年级六一</div><img src="https://imgmo.com/images/2023/05/20/c8e275af86da447556f930046b3f120a.jpg" class="c3581" /><img src="https://imgmo.com/images/2023/05/20/4685fd19d2fc85965243baf165e69b08.jpg" class="c3700" />
       <div id="ieyjd" class="c3894">    这是我们小学生涯中的第一次六一，它给我们带来了欢愉</div>
       <div id="i1b5i" class="c4005">至此，小学一年级结束</div>
       <div class="row">
