--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header id="nav-1" role="banner">
         <div class="container">
           <div class="header-inner">
-            <h1><a href="https://tin1us.github.io/liuerban.github.io"><img src="https://github.com/tin1us/liuerban.github.io/blob/main/img/th.jpg?raw=true" alt="HTMLPAGE" itemprop="logo" class="custom-logo" /></a></h1>
+            <h1><a href="https://tin1us.github.io/liuerban.github.io"><img src="https://i.postimg.cc/VNv4Skjq/th.jpg" alt="HTMLPAGE" itemprop="logo" class="custom-logo" /></a></h1>
             <nav role="navigation">
               <ul><a href="https://tin1us.github.io/liuerban.github.io" class="active">首页</a>
                 <li></li>
